--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -6,6 +6,7 @@
 	<title>Technobel GameEngine</title>
 	<link rel="stylesheet" href="Assets/Scripts/CSS/style.css">
 	<meta name="charset" content="utf-8">
+	<link rel="icon" href="Assets/Graphics/Logos/favicon.ico" />
 </head>
 <body>
 	<center>
@@ -13,13 +14,10 @@
 			Votre navigateur ne supporte pas le canvas dommage...
 		</canvas>
 	</center>
-	<div>
-		<button id ="change">Change Scene</button>
-	</div>
 
 	<!-- Tools  -->
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Utils.js"></script>
-	
+	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Math.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Random.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Vector.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Debug.js"></script>
@@ -28,21 +26,22 @@
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Time.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Tween.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Physics.js"></script>
+	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Field.js"></script>
+	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Emitter.js"></script>
+	<script type="text/javascript" src="Assets/Scripts/Javascript/Tools/Gfx.js"></script>
 	
 
 	<!-- Config -->
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Game/Config.js"></script>
 	
 	<!-- GameObjects -->
-	<script type="text/javascript" src="Assets/Scripts/Javascript/GameObjects/Rectangle.js"></script>
-	<script type="text/javascript" src="Assets/Scripts/Javascript/GameObjects/Sephiroth.js"></script>
-	
-
+	<script type="text/javascript" src="Assets/Scripts/Javascript/GameObjects/ParticulesSystem.js"></script>
+	<script type="text/javascript" src="Assets/Scripts/Javascript/GameObjects/Items.js"></script>
+	<script type="text/javascript" src="Assets/Scripts/Javascript/GameObjects/Player.js"></script>
 	<!-- Scene -->
+	<script type="text/javascript" src="Assets/Scripts/Javascript/Scenes/SceneTest.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Scenes/SceneModel.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Scenes/Loader.js"></script>
-	<script type="text/javascript" src="Assets/Scripts/Javascript/Scenes/Scene1.js"></script>
-	<script type="text/javascript" src="Assets/Scripts/Javascript/Scenes/Scene2.js"></script>
 
 	<!-- Game  -->
 	<script type="text/javascript" src="Assets/Scripts/Javascript/Game/Game.js"></script>
